--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.7.13",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.2.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -17,6 +18,7 @@
     "remark-html": "^15.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "autoprefixer": "^10.4.14",
